--- a/eshop-app/src/Pages/Contact/Contact.css
+++ b/eshop-app/src/Pages/Contact/Contact.css
@@ -1,4 +1,12 @@
 .contact-title {
-    font-size: 50px;
-    text-align: center;
+  font-size: 50px;
+  text-align: center;
+}
+.container {
+  font-size: 40px;
+  text-align: center;
+}
+a {
+  color: rgb(255, 0, 0);
+  cursor: pointer;
 }
