--- a/eshop-app/src/Components/Navbar/Navbar.css
+++ b/eshop-app/src/Components/Navbar/Navbar.css
@@ -1,19 +1,24 @@
 .nav-top {
-    margin: 75px auto 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 700px;
-    background: #333;
-    border-radius: 3px;
-    padding: 0px 20px;
-    box-shadow: 0 10px 20px rgba(19, 19, 19, 0.2);
+  margin: 75px auto 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 700px;
+  background: #333;
+  border-radius: 3px;
+  padding: 0px 20px;
+  box-shadow: 0 10px 20px rgba(19, 19, 19, 0.2);
 }
 
 .nav-top a {
-    font-size: 22px;
-    text-decoration: none;
-    color: #f1f1f1;
-    padding: 20px 20px;
+  font-size: 22px;
+  text-decoration: none;
+  color: #f1f1f1;
+  padding: 20px 20px;
+}
+@media screen and (max-width: 900px) {
+  .nav-top a {
+    font-size: 17px;
+  }
 }
